# FITSExplorer

./: .gitignore  CMakeLists.txt  DFits.pro  FITSExplorer.desktop  FITSExplorer.pro  FITSExplorer.ui  README.md  aboutdialog.cpp  aboutdialog.ui  colormap.cpp  colormap.h  dfits.cpp  dfits.h  dfits.ui  image_statistics_overview.cpp  image_statistics_overview.h  image_statistics_overview.ui  imagewidget.cpp  imagewidget.h  imagewidget.ui  lightcurve.cpp  lightcurve.h  lightcurve.ui  listmarkers.cpp  listmarkers.h  listmarkers.ui  main.cpp  marker.cpp  marker.h  mystatusbar.ui  overview.cpp  overview.h  overview.ui  overviewgraphicsview.cpp  overviewgraphicsview.h  pixanalyser.ui  preferences.cpp  preferences.h  preferences.ui  roitablewidget.ui  (+13 more)
dd/: overview.cpp
include/: FITSExplorer.h  aboutdialog.h  colormap.h  dfits.h  exttype.h  file.h  image_statistics_overview.h  imagewidget.h  lightcurve.h  listmarkers.h  marker.h  mode.h  mygraphicsview.h  mystatusbar.h  pixanalyser.h  roirect.h  roitablewidget.h  statusbar.h
src/: FITSExplorer.cpp  colormap.cpp  dfits.cpp  file.cpp  image_statistics_overview.cpp  imagewidget.cpp  lightcurve.cpp  listmarkers.cpp  main.cpp  marker.cpp  mygraphicsview.cpp  mystatusbar.cpp  pixanalyser.cpp  roirect.cpp  roitablewidget.cpp  statusbar.cpp
